[package]
name = "kingdom-client"
version = "0.0.0"
authors = ["Michael Dorst <m@mdorst.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
